# krywok-pipeline

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs-publish.yml
docs/: battery.md  custom_handlers.md  customization.md  examples.md  hooks.md  index.md  integrations.md  match.md  plugins.md  technical_reference.md
docs/overrides/: main.html
pipeline/battery/: __init__.py  battery.py  unit.py
pipeline/core/pipe/resources/: __init__.py  types.py
pipeline/core/pipeline/: pipeline.py
pipeline/core/pipeline/resources/: __init__.py  constants.py  types.py
pipeline/handlers/match_handler/: match_handler.py
pipeline/handlers/match_handler/units/: match_format.py  match_text.py
pipeline/handlers/match_handler/units/resources/: constants.py
pipeline/integration/falcon/: decorator.py
