[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "krywok-pipeline"
version = "1.0.0"
description = "Krywok Pipeline is a flexible, developer-centric validation engine. It is built for those who prioritize deep customization and want to manage validation, matching, and transformation logic in one centralized location."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license-files = ["LICENSE"]
authors = [{ name = "Krywok", email = "degadupeko@my-relay.app" }]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.urls]
Homepage = "https://pipeline.krywok.com"
Documentation = "https://pipeline.krywok.com"
Repository = "https://github.com/krywok/krywok-pipeline"
Issues = "https://github.com/krywok/krywok-pipeline/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
pipeline = ["py.typed"]

[project.optional-dependencies]
falcon = ["falcon>=4.0.0"]
docs = [
    "mkdocs==1.6.1",
    "mkdocstrings[python]==1.0.3",
    "mkdocs-material==9.7.3",
]
i18n = ["krywok-pipeline-plugin-i18n"]
